--- a/tox.ini
+++ b/tox.ini
@@ -18,8 +18,8 @@ deps =
     segyio
     h5py
 
-whitelist_externals = {[mpi]mpiexec}
+allowlist_externals = {[mpi]mpiexec}
 commands =
-    {[mpi]mpiexec} -n 2 -mca btl ^openib pytest --cov {envsitepackagesdir}/SeismicMesh --cov-report xml --cov-report term --ignore=pybind11 -m "parallel2"
-    {[mpi]mpiexec} -n 2 -mca btl ^openib pytest --cov {envsitepackagesdir}/SeismicMesh --cov-report xml --cov-report term --ignore=pybind11 --cov-append -m "parallel3"
+    {[mpi]mpiexec} -n 2 pytest --cov {envsitepackagesdir}/SeismicMesh --cov-report xml --cov-report term --ignore=pybind11 -m "parallel2"
+    {[mpi]mpiexec} -n 2 pytest --cov {envsitepackagesdir}/SeismicMesh --cov-report xml --cov-report term --ignore=pybind11 --cov-append -m "parallel3"
     pytest --cov {envsitepackagesdir}/SeismicMesh --cov-report xml --cov-report term --ignore=pybind11 --cov-append  -m "serial"
